# trace-analyzer

./: .gitignore  CMakeLists.txt  README.md
src/: ObjBuffer.cpp  ObjBuffer.hpp  analyzer.cpp  analyzer.hpp  analyzer_test.cpp  cli.cpp  cli.hpp  main.c  main.cpp  parser.c  parser.cpp  parser.h  parser.hpp  parser_test.cpp
